[project]
name = "crypto-fundraising"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "fuyutarow", email = "fuyutarow@gmail.com" }
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "Pandas>=2.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
  "ipykernel>=6.29.0",
  "black>=24.1.1",
  "mypy>=1.8.0",
  "pytest>=8.0.0",
  "isort>=5.13.2",
  "pandas-stubs>=2.1.4.231227",
  "plotly>=5.19.0",
  "nbformat>=5.9.2",
  "pip>=24.0",
  "wheel>=0.42.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_fundraising"]
